# medal-scfmod

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
ast/: Cargo.toml
ast-ir/: Cargo.toml
ast-ir/src/: expr.rs  formatter.rs  func.rs  lib.rs  local.rs  mod.rs  pos.rs  stat.rs
ast/src/: assign.rs  binary.rs  break.rs  call.rs  close.rs  closure.rs  continue.rs  for.rs  formatter.rs  global.rs  goto.rs  if.rs  index.rs  lib.rs  literal.rs  local.rs  local_allocator.rs  local_declarations.rs  name_gen.rs  name_locals.rs  repeat.rs  replace_locals.rs  return.rs  setlist.rs  side_effects.rs  structure_functions.rs  table.rs  traverse.rs  type.rs  type_system.rs  unary.rs  vararg.rs  while.rs
cfg/: Cargo.toml
cfg-ir/: Cargo.toml
cfg-ir/src/: block.rs  builder.rs  builder_old.rs  constant.rs  def_use.rs  dot.rs  error.rs  function.rs  instruction.rs  lib.rs  ssa.rs  value.rs  value_allocator.rs
cfg-ir/src/builder_old/: block.rs  instruction.rs  instruction_range.rs
cfg-ir/src/function/: flow_info.rs
cfg-ir/src/instruction/: binary.rs  branch_info.rs  call.rs  closure.rs  concat.rs  for_loop.rs  forloop.rs  load.rs  location.rs  move.rs  phi.rs  store.rs  terminator.rs  unary.rs  value_info.rs
cfg-ir/src/ssa/: construct.rs  destruct.rs  error.rs
cfg-ir/src/value/: ensure_write.rs
cfg-test/: Cargo.toml
cfg-test/src/: main.rs
cfg-to-ast/: Cargo.toml
cfg-to-ast-new/: Cargo.toml
cfg-to-ast-new/src/: compound.rs  conditional.rs  jump.rs  lib.rs  loop.rs  main.rs  optimizer.rs
cfg-to-ast-new/src/optimizer/: virtual_edge_elision.rs
cfg-to-ast/src/: lib.rs  lifter.rs  local_declaration.rs  loop_order.rs
cfg-to-ast/src/lifter/: local_declaration.rs  optimizer.rs
cfg/src/: block.rs  compound.rs  constant.rs  def_use.rs  dot.rs  error.rs  function.rs  inline.rs  instruction.rs  lib.rs  new_def_use.rs  new_ssa.rs  pattern.rs  ssa.rs  ssa_def_use.rs  value.rs
cfg/src/instruction/: call.rs  closure.rs  concat.rs  for_loop.rs  load.rs  location.rs  move.rs  terminator.rs
cfg/src/ssa/: construct.rs  destruct.rs  error.rs  inline.rs  interference_graph.rs  liveness.rs  param_dependency_graph.rs  structuring.rs  upvalues.rs
cfg/src/ssa/destruct/: interference_graph.rs  lexicographical_bfs.rs  lift_params.rs  liveness.rs  local_declarations.rs  rename_locals.rs  rename_variables.rs  resolve_param_dependencies.rs
graph/: Cargo.toml
graph/src/: algorithms.rs  dot.rs  edge.rs  error.rs  graph.rs  lib.rs
graph/src/algorithms/: dominators.rs  flow.rs
lua51-deserializer/: Cargo.toml
lua51-deserializer/src/: function.rs  lib.rs  local.rs  value.rs
lua51-deserializer/src/chunk/: header.rs  mod.rs
lua51-deserializer/src/instruction/: argument.rs  layout.rs  mod.rs  operation_code.rs  position.rs
lua51-lifter/: Cargo.toml
lua51-lifter/src/: instruction.rs  lifter.rs  main.rs  op_code.rs  panic_handled.rs  value.rs
lua51-lifter/src/chunk/: mod.rs
lua51-lifter/src/chunk/function/: ellipsis.rs  mod.rs
lua51-lifter/src/chunk/function/debug/: local.rs  mod.rs  position.rs  upvalue.rs
lua51-lifter/src/chunk/header/: endianness.rs  integral_flag.rs  mod.rs  version.rs
luau-lifter/: Cargo.toml
luau-lifter/src/: instruction.rs  lib.rs  lifter.rs  main.rs  op_code.rs
luau-lifter/src/deserializer/: bytecode.rs  chunk.rs  constant.rs  function.rs  list.rs  mod.rs
luau-webserver/: Cargo.toml
luau-webserver/src/: main.rs
luau-worker/: Cargo.toml
luau-worker/src/: lib.rs
medal-dec/: Cargo.toml  wrangler.toml
medal-dec/src/: lib.rs
medal-website/: Cargo.toml  wrangler.toml
medal-website/src/: lib.rs
pattern/: Cargo.toml
pattern-test/: Cargo.toml
pattern-test/src/: main.rs
pattern/src/: lib.rs
restructure/: Cargo.toml
restructure/src/: compound.rs  conditional.rs  jump.rs  lib.rs  loop.rs
