[workspace]
members = [
    "cfg",
    "ast",
    "lua51-lifter",
    "lua51-deserializer",
    "luau-lifter",
    "restructure",
    "medal-dec",
    "medal-website",
    "luau-worker",
]

[workspace.package]
edition = "2021"
authors = [
    "Mathias Pedersen <mathias.pedersen834@gmail.com>",
    "Jujhar Singh <jujharsmc@gmail.com>",
    "Amit Bashan <amit.bashan@icloud.com>",
]

[profile.release]
debug = true
lto = true
# strip = true
# panic = "abort"
