[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
enum-as-inner = "0.5.0"
itertools = "0.10.3"
enum_dispatch = "0.3.8"


[profile.release]
debug = true

[features]
no_local_debug = []