[package]
name = "lua51-lifter"
version = "0.1.0"
authors = ["Mathias Pedersen <mathias.pedersen834@gmail.com>", "Jujhar Singh <jujharsmc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.6"
nom = "7.1.0"
clap = { version = "3.1.0", features = ["derive"] }
anyhow = { version = "1.0.53", features = ["backtrace"] }
cfg = { path = "../cfg" }
lua51-deserializer = { path = "../lua51-deserializer" }
graph = { path = "../graph", features = ["dot"] }
ast = { path = "../ast" }
dhat = "0.3.0"
fxhash = "0.2.1"
either = "1.6.1"
restructure = { path = "../restructure" }
enum-as-inner = "0.5.0"
itertools = "*"

[features]
dhat-heap = []

[profile.release]
debug = true