[package]
name = "lua51-lifter"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "panic_handled"
path = "src/panic_handled.rs"

[dependencies]
num_enum = "0.5.7"
nom = "7.1.1"
clap = { version = "3.2.20", features = ["derive"] }
anyhow = { version = "1.0.63", features = ["backtrace"] }
cfg = { path = "../cfg" }
lua51-deserializer = { path = "../lua51-deserializer" }
# graph = { path = "../graph", features = ["dot"] }
petgraph = "0.6.2"
indexmap = "1.9.1"
ast = { path = "../ast" }
dhat = "0.3.0"
fxhash = "0.2.1"
either = "1.8.0"
restructure = { path = "../restructure" }
enum-as-inner = "0.5.1"
itertools = "0.10.5"

[features]
dhat-heap = []

[profile.release]
debug = true
