[package]
name = "luau-lifter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.6"
nom = "7.1.0"
nom-leb128 = "0.2.0"
clap = { version = "3.1.0", features = ["derive"] }
anyhow = { version = "1.0.53", features = ["backtrace"] }
cfg = { path = "../cfg" }
ast = { path = "../ast" }
mlua = { version = "0.8.5", features = ["luau"] }
rustc-hash = "1.1.0"
either = "1.6.1"
petgraph = { git = "https://github.com/jujhar16/petgraph.git", branch = "ensure_len_resize_with" }
restructure = { path = "../restructure" }
lazy_static = "1.4.0"
indexmap = "1.9.1"

