[package]
name = "luau-lifter"
version = "0.1.0"
edition = "2021"

[dependencies]
num_enum = "0.5.6"
nom = "7.1.0"
nom-leb128 = "0.2.0"
clap = { version = "4.0.26", features = ["derive"] }
anyhow = { version = "1.0.53", features = ["backtrace"] }
cfg = { path = "../cfg" }
ast = { path = "../ast" }
rustc-hash = "1.1.0"
dhat = "0.3.1"
either = "1.6.1"
petgraph = { git = "https://github.com/jujhar16/petgraph.git", branch = "ensure_len_resize_with" }
restructure = { path = "../restructure" }
lazy_static = "1.4.0"
itertools = "0.10.5"
indexmap = "1.9.1"
by_address = "1.1.0"
rayon = "1.5.3"
triomphe = "0.1.8"
parking_lot = "0.12.1"
walkdir = "2.3.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1" # ここを1に変更しました

[features]
dhat-heap = []
panic-handled = []
