[package]
name = "medal-dec"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
worker = { version = "0.3.0", features = ["d1"] }
luau-lifter = { path = "../luau-lifter" }
base64 = "0.22.1"
chrono = "0.4.38"
serde_json = "1.0.117"
serde = "1.0.202"

[lib]
crate-type = ["cdylib"]
