[package]
name = "restructure"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "*"
ast = { path="../ast" }
fxhash = "0.2.1"
derive_more = "0.99.17"
enum-as-inner = "0.5.0"
itertools = "0.10.3"
cfg = { path = "../cfg" }