[package]
name = "restructure"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
petgraph = { git = "https://github.com/jujhar16/petgraph.git", branch="ensure_len_resize_with" }
ast = { path="../ast" }
fxhash = "0.2.1"
derive_more = "0.99.17"
enum-as-inner = "0.5.1"
itertools = "0.10.5"
cfg = { path = "../cfg" }